# zhihuiti

./: .gitignore  .zhihuiti_daemon.json  BACKGROUND.md  CLAUDE.md  Dockerfile  Dockerfile.city-api  Dockerfile.full  README.md  config.yaml  package.json  pyproject.toml  tailwind.config.ts  test_oracle.py  tsconfig.json  zeabur.json  zhihuiti.db-shm  zhihuiti.db-wal
client/: index.html
lovable/: README-LOVABLE.md
reports/: daemon_20260328_191900.md  daemon_20260329_181722.md  daemon_20260329_184551.md  daemon_20260329_184633.md  daemon_20260331_143839.md  daemon_20260331_143921.md  daemon_20260331_144003.md  daemon_20260331_144642.md  daemon_20260331_144643.md  daemon_20260331_144925.md  daemon_20260331_144934.md  daemon_20260331_145248.md  daemon_20260331_150347.md  daemon_20260331_151503.md  daemon_20260331_152642.md
research/: cognitive_science_theories.md  control_theory.md  dynamic_systems_theories.md  historical_collision_cases.md  information_theory.md  linguistics_group_theory.md  neuroscience_theories.md  statistical_mechanics.md  synthesis_cross_domain_map.md  topology_theories.md
script/: build.ts
scripts/: city_api.py  dev_bot.py  oracle_bot.py  oracle_bot_backup.py  sync-to-lovable.sh
server/: index.ts  routes.ts  seed-heartai.ts  seed.ts  static.ts
silicon_realms/: agents.py  cli.py  dynamics.py  engine.py  models.py  realms.py  visualization.py
src/: index.ts
tests/: conftest.py  test_adaptation.py  test_agents.py  test_alphaarena.py  test_api.py  test_bloodline.py  test_causal_persistence.py  test_circuit_breaker.py  test_collision.py  test_collision_engine.py  test_consolidation.py  test_crypto_oracle.py  test_dag.py  test_dynamics.py  test_economy.py  test_engine.py  test_factory.py  test_futures.py  test_genome.py  test_hedge_oracle.py  test_market.py  test_memory.py  test_messaging.py  test_realms.py  (+8 more)
(+514 files in other folders)
