[project]
name = "zhihuiti"
version = "0.1.0"
description = "智慧体 — Autonomous multi-agent orchestration system with Silicon Realms simulator"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "discord.py>=2.3",
    "APScheduler>=3.10",
    "python-dotenv>=1.0",
    "flask>=3.1",
    "flask-cors>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
zhihuiti = "zhihuiti.cli:main"
silicon-realms = "silicon_realms.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
